[package]
name = "stabilizer-lockin"
version = "0.1.0"
authors = ["Matt Huszagh <huszaghmatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
# compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
